--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   equatable: ^2.0.5
   flutter_secure_storage: ^6.0.0
   skeletons: ^0.0.3
+  dropdown_button2: ^1.8.9
 
 dev_dependencies:
   flutter_test:
